# euphoria_api

./: .gitignore  pyproject.toml  wsgi.py
euphoria_api/: TESTING.ipynb  config.py  main.py
euphoria_api/databases/: tasks.py
euphoria_api/models/: tasks.py
euphoria_api/routes/: tasks.py
tests/: test_euphoria_api.py
