[tool.poetry]
name = "euphoria_api"
version = "0.1.0"
description = "API for Euphoria"
authors = ["Chris Birch <ichrisbirch@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.75.2"}
psycopg = "^3.0.11"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}
flake8 = "^4.0.1"
ipykernel = "^6.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
